# wozzits-window-engine

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  CONTRIBUTING.md  LICENSE.txt  README.md  windows_v8_build.md
cmake/: window_engineConfig.cmake.in
development_docs/: renderable_v0.md
examples/v8_script_smoke/: v8_script_smoke.cpp
scripts/: setup-workspace.ps1
src/: CMakeLists.txt
src/assets/: CMakeLists.txt  system.cpp
src/async/: CMakeLists.txt  async.cpp
src/engine/: CMakeLists.txt  app_context.cpp  engine.cpp  game_app.cpp  runtime_camera.cpp
src/engine/assets/: csv_asset_module.cpp  csv_export_asset_module.cpp  data_table_asset_module.cpp  diagnostic_resampled_time_series_asset_module.cpp  diagnostic_table_asset_module.cpp  diagnostic_timeframe_summary_asset_module.cpp  engine_asset_library.cpp  engine_asset_library_compiler_registry.cpp  engine_asset_library_file_carriers.cpp  engine_asset_library_files.cpp  engine_asset_library_json_compilers.cpp  engine_asset_library_scalar_fields.cpp  engine_asset_library_shaders.cpp  engine_asset_library_toml_compilers.cpp  file_carrier_asset_module.cpp  gaussian_splat_asset_module.cpp  json_asset_module.cpp  mesh_asset_module.cpp  renderable_asset_module.cpp  scalar_field_asset_module.cpp  shader_asset_module.cpp  toml_asset_module.cpp
src/engine/rendering/: builtin_render_programs.cpp  render_resource_resolver.cpp  renderable_debug_runtime.cpp  renderable_gpu_cache.cpp  renderable_pipeline_cache.cpp
src/event/: CMakeLists.txt  event.cpp
src/file/: CMakeLists.txt  filesystem.cpp
src/gpu/: CMakeLists.txt  gaussian_splat.cpp  gpu.cpp  mesh.cpp  scalar_field.cpp  scalar_field_texture.cpp
src/gpu/dx12/: dx12_device.cpp  dx12_device_internal.h  dx12_gaussian_splat.cpp  dx12_gaussian_splat_debug.cpp  dx12_internal.cpp  dx12_mesh.cpp  dx12_mesh_wireframe_debug.cpp  dx12_pipeline_factory.cpp  dx12_scalar_field_debug.cpp  dx12_scalar_field_texture.cpp  dx12_shader.cpp  shaders.cpp
src/input/: CMakeLists.txt  input.cpp  raw_input.cpp
src/jobs/: CMakeLists.txt  dag_scheduler.cpp  job_graph_template.cpp
src/logging/: CMakeLists.txt  logger.cpp  logger_queue.cpp  logger_state.cpp  logger_worker.cpp
src/platform/win32/: CMakeLists.txt
src/time/: CMakeLists.txt  w_time.cpp
src/window/: CMakeLists.txt  window2.cpp
tests/asset/: asset_test_1.cpp  csv_tests.cpp  engine_asset_library.cpp  foundational_assets.cpp  new_asset_test_1.cpp  scalar_field_procedural_tests.cpp  scalar_field_tests.cpp  scalar_field_texture_test.cpp
tests/asset_csv_export/: csv_export.cpp  csv_export_asset_module.cpp
tests/asset_data_table/: data_table.cpp  data_table_asset_module.cpp
tests/asset_diagnostics/: diagnostic_resampled_time_series.cpp  diagnostic_resampled_time_series_asset_module.cpp  diagnostic_resampled_time_series_csv_chain.cpp  diagnostic_resampled_time_series_table_view.cpp  diagnostic_table.cpp  diagnostic_table_asset_module.cpp  diagnostic_timeframe_summary.cpp  diagnostic_timeframe_summary_asset_module.cpp  diagnostic_timeframe_summary_csv_chain.cpp
tests/asset_gaussian_splat/: gaussian_splat_asset_module.cpp  gaussian_splat_ply_importer.cpp  ply_gaussian_splat.cpp  ply_reader.cpp
tests/asset_gltf/: gltf_importer.cpp  gltf_smoke_test.cpp
tests/asset_json/: json_asset_module.cpp  json_polytree.cpp  json_table.cpp  yyjson_wrapper.cpp
tests/asset_mesh/: mesh_asset_module.cpp  mesh_asset_module_interface.cpp  mesh_key_factory.cpp  mesh_table.cpp  procedural_mesh.cpp
tests/asset_ply/: ply_reader.cpp
tests/asset_renderable/: renderable_asset_module.cpp  renderable_table.cpp
tests/asset_toml/: toml_asset_module.cpp  toml_parser.cpp  toml_polytree.cpp
tests/engine/: engine.cpp  runtime_camera_tests.cpp
tests/fixtures/splats/: three_splats_ascii.ply
tests/game_app/: game_app_main.cpp
tests/gpu/: gpu_mesh.cpp
tests/jobs/: job_graph_tests.cpp  profiler_tests.cpp  render_prep_job_tests.cpp
tests/logging/: logger_queue_tests.cpp  logging.cpp  logging_test_harness.h  threaded_logger_tests.cpp
tests/rendering/: renderable_gpu_cache.cpp
tests/window/: test_gaussian_splat.cpp  test_mesh_wireframe.cpp  test_scalar_field.cpp  test_window.cpp
window_engine/asset/: README.md  cache.h  compiler.h  dag.h  system.h  system_1.h  types.h
window_engine/async/: async.h
window_engine/engine/: app_context.h  engine.h  game_app.h  game_app_benchmark.h  runtime_camera.h
window_engine/engine/assets/: ADDING_ASSET_TYPES.md  AssetsRoadmap.md  CreatingAssetsREADME.md  NewAssetsInstructions.md  NewSystem.md  compiler_version_tokens.h  csv_asset_library.h  csv_asset_module.h  csv_export_asset_module.h  data_table_asset_module.h  diagnostic_resampled_time_series_asset_module.h  diagnostic_table_asset_module.h  diagnostic_timeframe_summary_asset_module.h  engine_asset_key_core.h  engine_asset_library.h  engine_asset_library_internal.h  file_carrier_asset_module.h  gaussian_splat_asset_module.h  json_asset_module.h  key.h  mesh_asset_module.h  next_asset_types.md  renderable_asset_module.h  scalar_field_asset_module.h  schema_ids.h  schema_registry.h  shader_asset_module.h  toml_asset_module.h  type_extensions.h
window_engine/engine/rendering/: builtin_render_programs.h  render_resource_resolver.h  renderable_debug_runtime.h  renderable_gpu_cache.h  renderable_pipeline_cache.h
window_engine/event/: event.h  platform_event.h
window_engine/file/: filesystem.h  result.h
window_engine/gpu/: gaussian_splat.h  gpu.h  gpu_types.h  mesh.h  scalar_field.h  scalar_field_texture.h  shader.h
window_engine/gpu/dx12/: dx12.h  dx12_gaussian_splat_debug.h  (+4 more)
window_engine/input/: input.h  input_persistent_state.h
window_engine/jobs/: MemoryManagementDesignDoc.md  dag_scheduler.h  frame_execution.h  job_graph_template.h  job_profiler.h  job_types.h
window_engine/logging/: logger.h  logger_desc.h  logger_worker.h  logging.h  sinks.h
window_engine/render_backend/: render_backend_dx12.h  stub_backend.h
window_engine/time/: w_time.h
window_engine/window/: window2.h  window_types.h
(+107 files in other folders)
